--- a/monitor.html
+++ b/monitor.html
@@ -67,7 +67,8 @@
 
         <div class="connection-status" id="serverStatus">
           <h3>服务器连接状态</h3>
-          <p>状态: <span id="serverStatusText">未知</span></p>
+          <p>WebSocket状态: <span id="wsStatusText">未知</span></p>
+          <p>TCP服务器状态: <span id="tcpStatusText">未知</span></p>
           <p>最后心跳: <span id="lastHeartbeat">--:--:--</span></p>
           <p>最后数据: <span id="lastDataTime">--:--:--</span></p>
         </div>
