--- a/monitor.html
+++ b/monitor.html
@@ -144,132 +144,138 @@
                 <div class="stat-label">接收速率</div>
               </div>
               <div class="stat-card">
-                <div class="stat-value" id="deviceTemp">--</div>
-                <div class="stat-label">设备温度</div>
+                <div class="stat-value" id="airTemp">--</div>
+                <div class="stat-label">空气温度</div>
               </div>
               <div class="stat-card">
-                <div class="stat-value" id="deviceHumi">--</div>
-                <div class="stat-label">设备湿度</div>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <!-- 数据监测页面 -->
-        <div id="monitorPage" class="page">
-          <div class="card">
-            <h2><i class="fas fa-thermometer-half"></i> 温度湿度监测</h2>
-            <div class="chart-container">
-              <canvas id="tempHumidityChart"></canvas>
-            </div>
-          </div>
-
-          <div class="card">
-            <h2><i class="fas fa-info-circle"></i> 设备信息</h2>
-            <div class="device-info">
-              <div class="info-item">
-                <span class="info-label">设备ID</span>
-                <span class="info-value" id="monitorDeviceId">DEVICE_001</span>
-              </div>
-              <div class="info-item">
-                <span class="info-label">最后活跃</span>
-                <span class="info-value" id="monitorLastActive">--:--:--</span>
-              </div>
-              <div class="info-item">
-                <span class="info-label">连接状态</span>
-                <span class="info-value" id="monitorConnectionStatus">已连接</span>
-              </div>
-              <div class="info-item">
-                <span class="info-label">运行时间</span>
-                <span class="info-value" id="monitorUptime">00:00:00</span>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <!-- 流量管理页面 -->
-        <div id="trafficPage" class="page">
-          <div class="card">
-            <h2><i class="fas fa-stream"></i> 实时数据流</h2>
-            <div class="data-display" id="dataContainer">
-              <div class="data-item">
-                <div class="data-content">等待数据连接...</div>
-                <div class="data-time">--:--:--</div>
-              </div>
-            </div>
-          </div>
-
-          <div class="card">
-            <h2><i class="fas fa-chart-bar"></i> 数据统计</h2>
-            <div class="stats-grid">
-              <div class="stat-card">
-                <div class="stat-value" id="trafficPacketCount">0</div>
-                <div class="stat-label">数据包总数</div>
+                <div class="stat-value" id="airHumi">--</div>
+                <div class="stat-label">空气湿度</div>
               </div>
               <div class="stat-card">
-                <div class="stat-value" id="trafficPacketRate">0/s</div>
-                <div class="stat-label">接收速率</div>
+                <div class="stat-value" id="soilWet">--</div>
+                <div class="stat-label">土壤湿度</div>
               </div>
             </div>
-          </div>
-        </div>
-
-        <!-- 用户管理页面 -->
-        <div id="userPage" class="page">
-          <div class="card">
-            <h2><i class="fas fa-users"></i> 用户管理</h2>
-            <table class="user-table">
-              <thead>
-                <tr>
-                  <th>用户名</th>
-                  <th>姓名</th>
-                  <th>角色</th>
-                  <th>状态</th>
-                  <th>最后登录</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <td>admin</td>
-                  <td>系统管理员</td>
-                  <td>管理员</td>
-                  <td><span style="color:var(--success);">在线</span></td>
-                  <td>2023-10-15 14:30</td>
-                </tr>
-                <tr>
-                  <td>tech1</td>
-                  <td>张工程师</td>
-                  <td>技术人员</td>
-                  <td><span style="color:var(--success);">在线</span></td>
-                  <td>2023-10-15 13:45</td>
-                </tr>
-                <tr>
-                  <td>tech2</td>
-                  <td>李工程师</td>
-                  <td>技术人员</td>
-                  <td><span style="color:var(--warning);">离线</span></td>
-                  <td>2023-10-14 09:20</td>
-                </tr>
-                <tr>
-                  <td>monitor1</td>
-                  <td>王监控员</td>
-                  <td>监控人员</td>
-                  <td><span style="color:var(--success);">在线</span></td>
-                  <td>2023-10-15 10:15</td>
-                </tr>
-                <tr>
-                  <td>guest</td>
-                  <td>访客用户</td>
-                  <td>访客</td>
-                  <td><span style="color:var(--warning);">离线</span></td>
-                  <td>2023-10-12 16:40</td>
-                </tr>
-              </tbody>
-            </table>
           </div>
         </div>
       </div>
     </div>
+
+    <!-- 数据监测页面 -->
+    <div id="monitorPage" class="page">
+      <div class="card">
+        <h2><i class="fas fa-thermometer-half"></i> 环境数据监测</h2>
+        <div class="chart-container">
+          <canvas id="tempHumidityChart"></canvas>
+        </div>
+      </div>
+
+      <div class="card">
+        <h2><i class="fas fa-info-circle"></i> 设备信息</h2>
+        <div class="device-info">
+          <div class="info-item">
+            <span class="info-label">设备ID</span>
+            <span class="info-value" id="monitorDeviceId">DEVICE_001</span>
+          </div>
+          <div class="info-item">
+            <span class="info-label">最后活跃</span>
+            <span class="info-value" id="monitorLastActive">--:--:--</span>
+          </div>
+          <div class="info-item">
+            <span class="info-label">连接状态</span>
+            <span class="info-value" id="monitorConnectionStatus">已连接</span>
+          </div>
+          <div class="info-item">
+            <span class="info-label">运行时间</span>
+            <span class="info-value" id="monitorUptime">00:00:00</span>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- 流量管理页面 -->
+    <div id="trafficPage" class="page">
+      <div class="card">
+        <h2><i class="fas fa-stream"></i> 实时数据流</h2>
+        <div class="data-display" id="dataContainer">
+          <div class="data-item">
+            <div class="data-content">等待数据连接...</div>
+            <div class="data-time">--:--:--</div>
+          </div>
+        </div>
+      </div>
+
+      <div class="card">
+        <h2><i class="fas fa-chart-bar"></i> 数据统计</h2>
+        <div class="stats-grid">
+          <div class="stat-card">
+            <div class="stat-value" id="trafficPacketCount">0</div>
+            <div class="stat-label">数据包总数</div>
+          </div>
+          <div class="stat-card">
+            <div class="stat-value" id="trafficPacketRate">0/s</div>
+            <div class="stat-label">接收速率</div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- 用户管理页面 -->
+    <div id="userPage" class="page">
+      <div class="card">
+        <h2><i class="fas fa-users"></i> 用户管理</h2>
+        <table class="user-table">
+          <thead>
+            <tr>
+              <th>用户名</th>
+              <th>姓名</th>
+              <th>角色</th>
+              <th>状态</th>
+              <th>最后登录</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>admin</td>
+              <td>系统管理员</td>
+              <td>管理员</td>
+              <td><span style="color:var(--success);">在线</span></td>
+              <td>2023-10-15 14:30</td>
+            </tr>
+            <tr>
+              <td>tech1</td>
+              <td>张工程师</td>
+              <td>技术人员</td>
+              <td><span style="color:var(--success);">在线</span></td>
+              <td>2023-10-15 13:45</td>
+            </tr>
+            <tr>
+              <td>tech2</td>
+              <td>李工程师</td>
+              <td>技术人员</td>
+              <td><span style="color:var(--warning);">离线</span></td>
+              <td>2023-10-14 09:20</td>
+            </tr>
+            <tr>
+              <td>monitor1</td>
+              <td>王监控员</td>
+              <td>监控人员</td>
+              <td><span style="color:var(--success);">在线</span></td>
+              <td>2023-10-15 10:15</td>
+            </tr>
+            <tr>
+              <td>guest</td>
+              <td>访客用户</td>
+              <td>访客</td>
+              <td><span style="color:var(--warning);">离线</span></td>
+              <td>2023-10-12 16:40</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
+  </div>
   </div>
   <script src="script.js"></script>
 </body>
