--- a/monitor.html
+++ b/monitor.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <title>RK3506 综合监控系统</title>
+  <title>农林物联网综合监控系统</title>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <link rel="stylesheet" href="styles.css">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
@@ -16,7 +16,7 @@
   <!-- 登录页面 -->
   <div id="loginPage" class="login-container">
     <div class="login-box">
-      <h2 class="login-title"><i class="fas fa-microchip"></i> RK3506 监控系统</h2>
+      <h2 class="login-title"><i class="fas fa-microchip"></i> 农林物联网监控系统</h2>
       <form id="loginForm">
         <div class="form-group">
           <label for="username">用户名</label>
@@ -66,7 +66,7 @@
     <div class="main-content">
       <header>
         <div class="header-left">
-          <h1><i class="fas fa-microchip"></i> RK3506 开发板监控系统</h1>
+          <h1><i class="fas fa-microchip"></i> 农林物联网信息监测系统</h1>
         </div>
         <div class="header-right">
           <div class="user-info">
